# robot-bridge

./: .gitignore  LICENSE  README.md  pyproject.toml  start.sh
configs/: config.example.yaml
src/: __init__.py  api.py  asr_service.py  cli.py  config.py  hermes_client.py  main.py  tts_service.py  websocket_handler.py
tests/: test_bridge.py  test_e2e_pipeline.py
